--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Simon Dice</title>
 		<link rel="icon" href="./joystick.png">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
 		<div class="gameboard">
